# schindler-clone

./: .dropboxignore  .gitignore  00-index.md  README.md
constraints/: zybo_z7_20.xdc  zybo_z7_20_phase_a.xdc  zybo_z7_20_phase_b.xdc  zybo_z7_20_phase_tpg.xdc
docs/: 01-spec-changelog.md  01-spec.md  02-features-backlogREPLACED BY 01-SPEC.md  03-chroma-implementation.md  Parts List.xlsx  bom-v1.md  dev-roadmap.md  format-support-matrix.md  iter4g-diagnostic-findings.md  mvphd-comparison.md  opamp-stage.md  packaging-skus.md  panel-layout.md  phase-a-bench-test.md  phase-b-bench-test.md  phase-b-pipeline.md  phase-c-design.md  r2r-dac.md  reference-designs.md  rf-modulator-subsystem.md  scaler-v-warmup-fix-plan.md  schindler-playbook.md  side-arc-1-adv7393-bench.md  side-arc-2-genlock-bench.md  side-arc-6-te0720-bringup.md  signal-flow.md  ui-menu.md
firmware/mezzanine-prototype/: CMakeLists.txt  README.md  main.c  ssd1306.h  ws2812.pio
hdl/: axi_sync_inputs.v  axis_to_vid_io.v  chroma_gen.v  chroma_lut_cos.hex  color_correct.v  color_saturation.v  phase_b_top.v  sample_gen.v  scaler_bypass_1080p.v  scaler_coeffs_h.hex  scaler_coeffs_h.v  scaler_coeffs_v.v  scaler_crop_bypass.v  scaler_h.v  scaler_passthrough.v  scaler_top.v  scaler_v.v  top.v  top_phase_a.v  top_phase_tpg.v  vbi_gen.v  vid_timing.v  vsync_cdc_pulse.v  vtc_gen_gate.v
python/: analyze_capture.py  analyze_ila.py  gen_coeffs.py  scaler_kernel_compare.py
scripts/: flash_qspi.sh  make_boot.sh
sim/: sample_gen_tb.v  scaler_coeffs_h.hex  scaler_coeffs_v.hex  scaler_top_tb.v  vbi_gen_tb.v  (+1 more)
(+20 files in other folders)
